--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -41,6 +41,8 @@ jobs:
         with:
           node-version: 20
       - name: install
+        run: npm install
+      - name: install
         run: npm run build
       - name:
         run: echo "Deploying to production"
