--- a/.github/workflows/issue.yaml
+++ b/.github/workflows/issue.yaml
@@ -5,4 +5,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: print issue info
-        run: echo ${{ toJSON(github.event.issue) }}
+        run: echo "${{ toJSON(github.event.issue) }}"
